   * "File -> Import plain text" can now import from multiple files
   * "Save as..." now remembers subtitle format
   * Now detects VobSub/Bluray-sup with wrong extension when opening a file
   * Now gives nice error message when opening idx, rar or zip files
   * French rules regarding spaces/!?:; in "Fix common errors" - thx René
* FIXED:
  * Fixed bug in "Fix common errors: Remove hyphen" - thx honeybunny
  * Fixed bug in "Remove text for HI" issue - thx cipry15
  * Fixed bug in "Auto br" - thx XhmikosR
  * Split up D-Cinema smtp to 2007 and 2010 versions - thx Knut
  * Missing outline/shadow in export images - thx minhjirachi
  * Fixed some missing characters in PAC format - thx Adrian
  * Fixed some bugs in "Youtube transcript" format - thx tony
  * Fixed bug in reading of end-tags in ASS - thx Null
  * "Delete" context menu in text box did not work - thx ivandrofly


3.3.11 (6th December 2013)
* NEW:
   * Added "line height" to image export
   * Added Vietnamese language file - thx everytime
   * Added custom shortcut for vertical zoom out of waveform
* IMPROVED:
   * Updated Italian language file - thx SilverDrake
   * Updated German language file - thx Christoph
   * Updated Bulgarian language file - thx Iavor
   * Updated Brazilian Portuguese language file - thx Igor Rückert
   * Added .m4a file type to audio file types
   * Added Chinese Traditional to Tesseract OCR dictionary list
   * Added Polish spelling dictionary to download list
   * "Adjust display durations" now allows down to 75% - thx Dennis
   * "Restore auto-backup" window now displays number of bytes
   * Now remembers last "Change casing" choice - thx anil
* FIXED:
   * Fixed audio waveform so it works better with VLC
   * Fixed spectrogram sync
   * Fixed spectrogram so it works with FFmpeg
   * Dragging line in wave form in frames mode keeps duration - thx Adrian
   * Fixed Slovak spell check dictionary link
   * Status text after re-calculating display times fixed - thx Dennis